--- a/index.html
+++ b/index.html
@@ -10,4 +10,6 @@
 </body>
 <script src="first.js"></script>
 <script src="variable.js"></script>
+<script src="datatype.js"></script>
+<script src="object.js"></script>
 </html>
