--- a/index.html
+++ b/index.html
@@ -12,4 +12,6 @@
 <script src="variable.js"></script>
 <script src="datatype.js"></script>
 <script src="object.js"></script>
+<script src="operators.js"></script>
+<script src="ternary.js"></script>
 </html>
