--- a/index.html
+++ b/index.html
@@ -14,4 +14,7 @@
 <script src="object.js"></script>
 <script src="operators.js"></script>
 <script src="ternary.js"></script>
+<script src="prompt.js"></script>
+<script src="forloop.js"></script>
+<script src="string.js"></script>
 </html>
