--- a/index.html
+++ b/index.html
@@ -17,4 +17,6 @@
 <script src="prompt.js"></script>
 <script src="forloop.js"></script>
 <script src="string.js"></script>
+<script src="function.js"></script>
+<script src="arrow_function.js"></script>
 </html>
